Fixed portfolio image wrap between 1024 & 1111px

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,9 @@ body {
     padding: 16px 0 8px;
     text-align: center;
     max-width: 1024px; }
+    @media screen and (min-width: 1024px) {
+      body .container {
+        width: 100%; } }
   body .divider {
     width: 85%;
     margin: auto;
@@ -167,26 +170,32 @@ body {
     body .portfolio .flex {
       flex-flow: column;
       color: #46ae6b; }
-      body .portfolio .flex ul li .project img {
-        width: 100%;
-        max-width: 1280px;
-        margin-bottom: 8px;
-        border-radius: 4px; }
-      body .portfolio .flex ul li .project h3 {
-        margin-bottom: 8px;
-        font-weight: 300;
-        font-size: 1.35em; }
-      body .portfolio .flex ul li .project p {
-        margin-bottom: 32px;
-        color: #7a7a7a; }
-      @media screen and (min-width: 768px) {
-        body .portfolio .flex ul li {
-          width: 50%;
-          float: left;
-          padding: 0 4px; } }
-      @media screen and (min-width: 1024px) {
-        body .portfolio .flex ul li {
-          width: 33%; } }
+      body .portfolio .flex ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around; }
+        body .portfolio .flex ul li .project img {
+          width: 100%;
+          max-width: 1280px;
+          margin-bottom: 8px;
+          border-radius: 4px; }
+        body .portfolio .flex ul li .project h3 {
+          margin-bottom: 8px;
+          font-weight: 300;
+          font-size: 1.35em; }
+        body .portfolio .flex ul li .project p {
+          margin-bottom: 32px;
+          color: #7a7a7a; }
+        @media screen and (min-width: 768px) {
+          body .portfolio .flex ul li {
+            width: 50%;
+            float: left;
+            padding: 0 4px; } }
+        @media screen and (min-width: 1024px) {
+          body .portfolio .flex ul li {
+            display: inline-block;
+            width: 33%;
+            color: white; } }
   body h2 {
     color: #46ae6b; }
   body p {
