--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -10,6 +10,9 @@ body {
     padding: $containerPadding;
     text-align: center;
     max-width: 1024px;
+    @media screen and (min-width: 1024px) {
+      width: 100%;
+    }
   }
 
   .divider {
