--- a/scss/partials/_portfolio.scss
+++ b/scss/partials/_portfolio.scss
@@ -5,6 +5,9 @@
 
     color: $green;
     ul {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
       li {
         .project {
           img {
@@ -32,7 +35,9 @@
 
         }
         @media screen and (min-width: 1024px){
+          display:inline-block;
           width: 33%;
+          color:white;
 
         }
       }
